# Mif39-2014

./: README.md
C#/Assets/: AssemblyInfo.cs  Assets.cs  Assets.csproj
C++/: CMakeLists.txt
C++/AssetGenerics/: CMakeLists.txt  generics.cpp  generics.hpp  internals.hpp  resourceattribute.hpp  sharedresource.hpp  sharedresourceloader.hpp  sharedresourcemanager.hpp
C++/AssetInterfaces/: CMakeLists.txt  attributecontainer.cpp  attributecontainer.hpp  interfaces.cpp  interfaces.hpp  internals.hpp  iresource.cpp  iresource.hpp  iresourceattribute.hpp  isharedresource.cpp  isharedresource.hpp  isharedresourceloader.hpp  isharedresourcemanager.cpp  isharedresourcemanager.hpp  resourceholder.cpp  resourceholder.hpp
C++/Assets/: CMakeLists.txt  Image.cpp  Image.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  assets.cpp  assets.hpp  behaviour.cpp  behaviour.hpp  gameentity.cpp  gameentity.hpp  gameobject.cpp  gameobject.hpp  light.cpp  light.hpp  structures.cpp  structures.hpp  world.cpp  world.hpp  worldcell.cpp  worldcell.hpp
C++/FuzzyLogicBehaviour/: CMakeLists.txt  fuzzylogicbehaviour.cpp  fuzzylogicbehaviour.hpp
C++/Networking/: CMakeLists.txt  communicationpolicy.cpp  communicationpolicy.hpp  connectionstream.cpp  connectionstream.hpp  networkbuffer.cpp  networkbuffer.hpp  networking.hpp
C++/QImageLoader/: CMakeLists.txt  qimageloader.cpp  qimageloader.hpp
C++/Samples/: CMakeLists.txt
C++/Samples/SimpleAssetClient/: CMakeLists.txt  main.cpp
C++/Samples/SimpleAssetServer/: CMakeLists.txt  main.cpp
C++/Samples/ThreadedServer/: CMakeLists.txt  main.cpp
C++/Samples/WavefrontTest/: CMakeLists.txt  main.cpp
C++/TcpNetworking/: CMakeLists.txt  simpletcpendpoint.cpp  simpletcpendpoint.hpp  simpletcpstartpoint.cpp  simpletcpstartpoint.hpp  tcpsocket.cpp  tcpsocket.hpp
C++/Utility/: CMakeLists.txt  SmartPointer.h  Wrapper.h  bytebuffer.cpp  bytebuffer.hpp  bytebuffer.inline.hpp  filedescriptor.cpp  filedescriptor.hpp  filetokenizer.cpp  filetokenizer.hpp  hasname.cpp  hasname.hpp  hasuuid.cpp  hasuuid.hpp  includes.hpp  listof.hpp  singleton.hpp  tokenized.hpp  utility.cpp  utility.hpp
C++/Wavefront/: CMakeLists.txt  wavefront.cpp  wavefront.hpp  wavefrontloadermtl.cpp  wavefrontloadermtl.hpp  wavefrontloaderobj.cpp  wavefrontloaderobj.hpp  wavefrontmaterial.cpp  wavefrontmaterial.hpp
Resources/: wavefront-mtl.xml  wavefront-obj.xml  world-entity.xml  world-light.xml  world.xml
Unity/FuzzyLogicTest/: Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-vs.csproj  SheepsAndDog-csharp.sln  SheepsAndDog-csharp.userprefs  SheepsAndDog.sln  SheepsAndDog.userprefs
Unity/FuzzyLogicTest/Assets/: SimpleDimmer.unity
Unity/FuzzyLogicTest/Assets/Scripts/: ControllableLight.cs  LightSensor.cs  ModalPanel.cs  SimpleDimmer.cs
c#/: Mif39-C#.sln
c#/DesignPatterns/: DesignPatterns.csproj  Factory.cs
c#/DesignPatterns/Properties/: AssemblyInfo.cs
c#/FuzzyLogicEngine/: AssemblyInfo.cs  Engine.cs  FuzzyLogic.csproj  NamedObject.cs  Object.cs
c#/FuzzyLogicEngine/Iterators/: IndexedReader.cs  ObjectIterator.cs  ObjectList.cs
c#/FuzzyLogicEngine/Rule/: Antecedent.cs  Consequent.cs  Expression.cs  Operator.cs  Proposition.cs  Rule.cs  RuleBlock.cs
c#/FuzzyLogicEngine/Term/: Curve.cs  Keyframe.cs
c#/FuzzyLogicEngine/Variable/: InputVariable.cs  OutputVariable.cs  Variable.cs
c#/FuzzyLogicSolver/: Accumulated.cs  Activated.cs  Antecedent.cs  Consequent.cs  Converter.cs  Curve.cs  Engine.cs  Expression.cs  FuzzyLogicSolver.csproj  InputVariable.cs  Object.cs  Operator.cs  OutputVariable.cs  Proposition.cs  Rule.cs  RuleBlock.cs  Variable.cs
c#/FuzzyLogicSolver/Defuzzyfier/: Centroid.cs  Defuzzyfier.cs  IntegralDefuzzyfier.cs
c#/FuzzyLogicSolver/Factory/: DefuzzyfierFactory.cs  SNormFactory.cs  TNormFactory.cs
c#/FuzzyLogicSolver/Norm/: Norm.cs  SNorm.cs  TNorm.cs
c#/FuzzyLogicSolver/Norm/SNorm/: Maximum.cs
c#/FuzzyLogicSolver/Norm/TNorm/: Minimum.cs
c#/FuzzyLogicSolver/Properties/: AssemblyInfo.cs
c#/FuzzyLogicTest/: AssemblyInfo.cs  FuzzyLogicTest.csproj  Main.cs
