cmake_minimum_required(VERSION 2.8)

project ( Wavefront CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_library(Wavefront SHARED ${SRC})
target_link_libraries(Wavefront Qt5::Core)
target_link_libraries(Wavefront Qt5::Gui)
target_link_libraries(Wavefront Utility)
target_link_libraries(Wavefront AssetInterfaces)
target_link_libraries(Wavefront AssetGenerics)
target_link_libraries(Wavefront Assets)
