cmake_minimum_required(VERSION 2.8)

project ( SimpleAssetClient CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(SimpleAssetClient ${SRC})
target_link_libraries(SimpleAssetClient Qt5::Core)
target_link_libraries(SimpleAssetClient Qt5::Gui)
target_link_libraries(SimpleAssetClient Utility)
target_link_libraries(SimpleAssetClient Networking)
target_link_libraries(SimpleAssetClient TcpNetworking)
target_link_libraries(SimpleAssetClient AssetInterfaces)
target_link_libraries(SimpleAssetClient AssetGenerics)
target_link_libraries(SimpleAssetClient Assets)
target_link_libraries(SimpleAssetClient Wavefront)
target_link_libraries(SimpleAssetClient QImageLoader)
