cmake_minimum_required(VERSION 2.8)

project ( SimpleAssetServer CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(SimpleAssetServer ${SRC})
target_link_libraries(SimpleAssetServer Qt5::Core)
target_link_libraries(SimpleAssetServer Qt5::Gui)
target_link_libraries(SimpleAssetServer Utility)
target_link_libraries(SimpleAssetServer Networking)
target_link_libraries(SimpleAssetServer TcpNetworking)
target_link_libraries(SimpleAssetServer AssetInterfaces)
target_link_libraries(SimpleAssetServer AssetGenerics)
target_link_libraries(SimpleAssetServer Assets)
target_link_libraries(SimpleAssetServer Wavefront)
target_link_libraries(SimpleAssetServer QImageLoader)
