cmake_minimum_required(VERSION 2.8)

project ( ThreadedServer CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(ThreadedServer ${SRC})
target_link_libraries(ThreadedServer Qt5::Core)
target_link_libraries(ThreadedServer Qt5::Gui)
target_link_libraries(ThreadedServer Utility)
target_link_libraries(ThreadedServer Networking)
target_link_libraries(ThreadedServer TcpNetworking)
target_link_libraries(ThreadedServer AssetInterfaces)
target_link_libraries(ThreadedServer AssetGenerics)
target_link_libraries(ThreadedServer Assets)
target_link_libraries(ThreadedServer Wavefront)
target_link_libraries(ThreadedServer QImageLoader)
